--- a/k777_novos_ligantes.ipynb
+++ b/k777_novos_ligantes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c9cbc902-f865-4029-93d0-8c87b5638215",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "22506d43-b259-4eaf-b124-ece8bebdc7f2",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "b0f2e440-3b78-475e-afdd-72bbce9d6d78",
    "metadata": {},
    "outputs": [],
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "160ec7ed-5100-4ef6-a8b7-b5a388e656c1",
    "metadata": {},
    "outputs": [],
@@ -190,10 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "6575aae0-6496-4aaf-8c24-dc5a9147ead6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'get_descriptors' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-e3c4dfc4035c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlista\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mchembl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msmiles\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcruzain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mlista\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mchembl\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msmiles\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mget_descriptors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mChem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMolFromSmiles\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msmiles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'get_descriptors' is not defined"
+     ]
+    }
+   ],
    "source": [
     "lista = []\n",
     "for chembl, smiles in cruzain.to_numpy().tolist():\n",
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "887ec019-012e-4fae-a52b-70d1c7062266",
    "metadata": {},
    "outputs": [],
@@ -212,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "9ea1bbf2-7221-404c-b34e-267ffbe425a4",
    "metadata": {},
    "outputs": [
@@ -249,174 +261,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>562</td>\n",
-       "      <td>CHEMBL4095194</td>\n",
-       "      <td>c1c[nH]c(CN2CCc3ccccc3C2)c1</td>\n",
-       "      <td>2.57300</td>\n",
-       "      <td>19.03000</td>\n",
-       "      <td>212.13135</td>\n",
-       "      <td>0.81030</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.71309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>88</td>\n",
-       "      <td>CHEMBL3233099</td>\n",
-       "      <td>Cc1ccccc1OCCNCCc1nc2ccccc2[nH]1</td>\n",
-       "      <td>3.08242</td>\n",
-       "      <td>49.94000</td>\n",
-       "      <td>295.16846</td>\n",
-       "      <td>0.65859</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.39986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>541</td>\n",
-       "      <td>CHEMBL4068608</td>\n",
-       "      <td>CN1CCN(Cc2ccc[nH]2)CC1</td>\n",
-       "      <td>0.76210</td>\n",
-       "      <td>22.27000</td>\n",
-       "      <td>179.14225</td>\n",
-       "      <td>0.72391</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.35635</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>359</td>\n",
-       "      <td>CHEMBL3623846</td>\n",
-       "      <td>O=P(O)(O)[C@H](NC[C@@H]1CCCc2ccccc21)c1ccc(F)cc1</td>\n",
-       "      <td>3.71170</td>\n",
-       "      <td>69.56000</td>\n",
-       "      <td>349.12431</td>\n",
-       "      <td>0.71995</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.25387</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>366</td>\n",
-       "      <td>CHEMBL3291070</td>\n",
-       "      <td>COc1cc(O)cc2c1[C@@H](/C=C/c1ccc(O)cc1)[C@@H]1[...</td>\n",
-       "      <td>6.50120</td>\n",
-       "      <td>97.61000</td>\n",
-       "      <td>524.18350</td>\n",
-       "      <td>0.27412</td>\n",
-       "      <td>7</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.11433</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>669</td>\n",
-       "      <td>CHEMBL4082855</td>\n",
-       "      <td>O=C(CNc1ccnc2cc(Cl)ccc12)N1CCOCC1</td>\n",
-       "      <td>2.15890</td>\n",
-       "      <td>54.46000</td>\n",
-       "      <td>305.09310</td>\n",
-       "      <td>0.94395</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>247</td>\n",
-       "      <td>CHEMBL3233108</td>\n",
-       "      <td>Cc1ccccc1OCC(=O)NCCC(=O)Nc1ccccc1O</td>\n",
-       "      <td>2.22442</td>\n",
-       "      <td>87.66000</td>\n",
-       "      <td>328.14231</td>\n",
-       "      <td>0.68020</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>334</td>\n",
-       "      <td>CHEMBL3233106</td>\n",
-       "      <td>Cc1ccccc1OCC(=O)NCCC(=O)Nc1ccccc1</td>\n",
-       "      <td>2.51882</td>\n",
-       "      <td>67.43000</td>\n",
-       "      <td>312.14739</td>\n",
-       "      <td>0.82530</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>498</td>\n",
-       "      <td>CHEMBL3104699</td>\n",
-       "      <td>O=C1/C(=C/c2ccnc3ccccc23)CCC/C1=C\\c1ccnc2ccccc12</td>\n",
-       "      <td>6.00300</td>\n",
-       "      <td>42.85000</td>\n",
-       "      <td>376.15756</td>\n",
-       "      <td>0.40282</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>566</td>\n",
-       "      <td>CHEMBL3104699</td>\n",
-       "      <td>O=C1/C(=C/c2ccnc3ccccc23)CCC/C1=C\\c1ccnc2ccccc12</td>\n",
-       "      <td>6.00300</td>\n",
-       "      <td>42.85000</td>\n",
-       "      <td>376.15756</td>\n",
-       "      <td>0.40282</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>715 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            chembl                                             smiles    logp  \\\n",
-       "562  CHEMBL4095194                        c1c[nH]c(CN2CCc3ccccc3C2)c1 2.57300   \n",
-       "88   CHEMBL3233099                    Cc1ccccc1OCCNCCc1nc2ccccc2[nH]1 3.08242   \n",
-       "541  CHEMBL4068608                             CN1CCN(Cc2ccc[nH]2)CC1 0.76210   \n",
-       "359  CHEMBL3623846   O=P(O)(O)[C@H](NC[C@@H]1CCCc2ccccc21)c1ccc(F)cc1 3.71170   \n",
-       "366  CHEMBL3291070  COc1cc(O)cc2c1[C@@H](/C=C/c1ccc(O)cc1)[C@@H]1[... 6.50120   \n",
-       "..             ...                                                ...     ...   \n",
-       "669  CHEMBL4082855                  O=C(CNc1ccnc2cc(Cl)ccc12)N1CCOCC1 2.15890   \n",
-       "247  CHEMBL3233108                 Cc1ccccc1OCC(=O)NCCC(=O)Nc1ccccc1O 2.22442   \n",
-       "334  CHEMBL3233106                  Cc1ccccc1OCC(=O)NCCC(=O)Nc1ccccc1 2.51882   \n",
-       "498  CHEMBL3104699   O=C1/C(=C/c2ccnc3ccccc23)CCC/C1=C\\c1ccnc2ccccc12 6.00300   \n",
-       "566  CHEMBL3104699   O=C1/C(=C/c2ccnc3ccccc23)CCC/C1=C\\c1ccnc2ccccc12 6.00300   \n",
-       "\n",
-       "        tpsa     molwt     qed  hba  hbd  active_probability  \n",
-       "562 19.03000 212.13135 0.81030    1    1             0.71309  \n",
-       "88  49.94000 295.16846 0.65859    3    2             0.39986  \n",
-       "541 22.27000 179.14225 0.72391    2    1             0.35635  \n",
-       "359 69.56000 349.12431 0.71995    2    3             0.25387  \n",
-       "366 97.61000 524.18350 0.27412    7    3             0.11433  \n",
-       "..       ...       ...     ...  ...  ...                 ...  \n",
-       "669 54.46000 305.09310 0.94395    4    1             0.00000  \n",
-       "247 87.66000 328.14231 0.68020    4    3             0.00000  \n",
-       "334 67.43000 312.14739 0.82530    3    2             0.00000  \n",
-       "498 42.85000 376.15756 0.40282    3    0             0.00000  \n",
-       "566 42.85000 376.15756 0.40282    3    0             0.00000  \n",
-       "\n",
-       "[715 rows x 9 columns]"
+       "Empty DataFrame\n",
+       "Columns: [chembl, smiles, logp, tpsa, molwt, qed, hba, hbd, active_probability]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "43d088ba-3623-4212-9065-4a6d217705d5",
    "metadata": {},
    "outputs": [
@@ -464,143 +319,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>10</td>\n",
-       "      <td>CHEMBL344174</td>\n",
-       "      <td>N#CCNC(=O)[C@H](Cc1ccccc1)NC(=O)OCc1ccccc1</td>\n",
-       "      <td>2.16388</td>\n",
-       "      <td>91.22000</td>\n",
-       "      <td>337.14264</td>\n",
-       "      <td>0.75756</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>209</td>\n",
-       "      <td>CHEMBL604281</td>\n",
-       "      <td>CN(C#N)N(C)C(=O)[C@H](Cc1ccccc1)NC(=O)OCc1ccccc1</td>\n",
-       "      <td>2.31038</td>\n",
-       "      <td>85.67000</td>\n",
-       "      <td>366.16919</td>\n",
-       "      <td>0.46167</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00029</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>361</td>\n",
-       "      <td>CHEMBL3233104</td>\n",
-       "      <td>Cc1cc(C)c(C#N)c(SCCNC(=O)COc2ccccc2C)n1</td>\n",
-       "      <td>3.16584</td>\n",
-       "      <td>75.01000</td>\n",
-       "      <td>355.13545</td>\n",
-       "      <td>0.60982</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00005</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>411</td>\n",
-       "      <td>CHEMBL6966</td>\n",
-       "      <td>COc1ccc(CCN(C)CCCC(C#N)(c2ccc(OC)c(OC)c2)C(C)C...</td>\n",
-       "      <td>5.09308</td>\n",
-       "      <td>63.95000</td>\n",
-       "      <td>454.28316</td>\n",
-       "      <td>0.41990</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00987</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>483</td>\n",
-       "      <td>CHEMBL4217658</td>\n",
-       "      <td>N#CC1(NC(=O)[C@H](Cc2ccccc2)NC(=O)OCc2ccccc2)CC1</td>\n",
-       "      <td>2.69648</td>\n",
-       "      <td>91.22000</td>\n",
-       "      <td>363.15829</td>\n",
-       "      <td>0.79117</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00027</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>484</td>\n",
-       "      <td>CHEMBL4212454</td>\n",
-       "      <td>CN(C#N)N(C)C(=O)[C@H](Cc1ccccc1)NC(=O)c1cc(C(C...</td>\n",
-       "      <td>1.84498</td>\n",
-       "      <td>94.26000</td>\n",
-       "      <td>396.22737</td>\n",
-       "      <td>0.45679</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>554</td>\n",
-       "      <td>CHEMBL3233084</td>\n",
-       "      <td>N#Cc1ccccc1OCC(=O)NCCc1nc2ccccc2[nH]1</td>\n",
-       "      <td>2.17228</td>\n",
-       "      <td>90.80000</td>\n",
-       "      <td>320.12733</td>\n",
-       "      <td>0.72803</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>581</td>\n",
-       "      <td>CHEMBL4217414</td>\n",
-       "      <td>CC(C)C[C@H](NC(=O)c1cc(C(C)(C)C)nn1C)C(=O)N(C)...</td>\n",
-       "      <td>1.64838</td>\n",
-       "      <td>94.26000</td>\n",
-       "      <td>362.24302</td>\n",
-       "      <td>0.47164</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00082</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>682</td>\n",
-       "      <td>CHEMBL4212989</td>\n",
-       "      <td>CC(C)C[C@H](NC(=O)OC(C)(C)C)C(=O)N(C)N(C)C#N</td>\n",
-       "      <td>1.71208</td>\n",
-       "      <td>85.67000</td>\n",
-       "      <td>298.20049</td>\n",
-       "      <td>0.47424</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00036</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            chembl                                             smiles    logp  \\\n",
-       "10    CHEMBL344174         N#CCNC(=O)[C@H](Cc1ccccc1)NC(=O)OCc1ccccc1 2.16388   \n",
-       "209   CHEMBL604281   CN(C#N)N(C)C(=O)[C@H](Cc1ccccc1)NC(=O)OCc1ccccc1 2.31038   \n",
-       "361  CHEMBL3233104            Cc1cc(C)c(C#N)c(SCCNC(=O)COc2ccccc2C)n1 3.16584   \n",
-       "411     CHEMBL6966  COc1ccc(CCN(C)CCCC(C#N)(c2ccc(OC)c(OC)c2)C(C)C... 5.09308   \n",
-       "483  CHEMBL4217658   N#CC1(NC(=O)[C@H](Cc2ccccc2)NC(=O)OCc2ccccc2)CC1 2.69648   \n",
-       "484  CHEMBL4212454  CN(C#N)N(C)C(=O)[C@H](Cc1ccccc1)NC(=O)c1cc(C(C... 1.84498   \n",
-       "554  CHEMBL3233084              N#Cc1ccccc1OCC(=O)NCCc1nc2ccccc2[nH]1 2.17228   \n",
-       "581  CHEMBL4217414  CC(C)C[C@H](NC(=O)c1cc(C(C)(C)C)nn1C)C(=O)N(C)... 1.64838   \n",
-       "682  CHEMBL4212989       CC(C)C[C@H](NC(=O)OC(C)(C)C)C(=O)N(C)N(C)C#N 1.71208   \n",
-       "\n",
-       "        tpsa     molwt     qed  hba  hbd  active_probability  \n",
-       "10  91.22000 337.14264 0.75756    4    2             0.00008  \n",
-       "209 85.67000 366.16919 0.46167    5    1             0.00029  \n",
-       "361 75.01000 355.13545 0.60982    5    1             0.00005  \n",
-       "411 63.95000 454.28316 0.41990    6    0             0.00987  \n",
-       "483 91.22000 363.15829 0.79117    4    2             0.00027  \n",
-       "484 94.26000 396.22737 0.45679    6    1             0.00078  \n",
-       "554 90.80000 320.12733 0.72803    4    2             0.00109  \n",
-       "581 94.26000 362.24302 0.47164    6    1             0.00082  \n",
-       "682 85.67000 298.20049 0.47424    5    1             0.00036  "
+       "Empty DataFrame\n",
+       "Columns: [chembl, smiles, logp, tpsa, molwt, qed, hba, hbd, active_probability]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,10 +340,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "956b454b-ff77-48ab-bc7c-ea91efba6fe2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 0 is out of bounds for axis 0 with size 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-b8840e9f09d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msmiles_target\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_cru_pro\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdata_cru_pro\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchembl\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"CHEMBL91704\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msmiles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+     ]
+    }
+   ],
    "source": [
     "smiles_target = data_cru_pro.loc[data_cru_pro.chembl == \"CHEMBL91704\"].smiles.to_numpy()[0]"
    ]
